updated api and tx request
