# src/api/requests/mod.rs
@@ -86,6 +86,8 @@ pub struct PostTransactionsRequest {
     pub to_currency: Currency,
     pub value: Amount,
     pub fee: Amount,
+    pub exchange_id: Option<ExchangeId>,
+    pub exchange_rate: Option<f64>,
     pub hold_until: Option<SystemTime>,
 }
 
